2006-09-27  Alexander Dupuy  <alex.dupuy@counterstorm.com>

	* perl/BkReportGen/helper_raid.pl (helper_raid): #8079: do 3ware RAID;
	actually get details for software RAID on FC5 (requires two -v's)
	
2006-09-26  Alexander Dupuy  <alex.dupuy@counterstorm.com>

	* perl/BkReportGen/helper_smart.pl (helper_smart): parse smartctl exit
	#8079: handle -d device option for SATA and 3ware RAID
	
2006-04-17  James Tanis  <jtt@swift.sysdetect.com>

	* Baka/NetUtils.pm (netmask_from_bits($): Create a netmask from a
	bit length argument.

2006-03-30  Seth Robertson  <seth@startide.sysdetect.com>

	* perl/BkReportGen/helper_loadaverage.pl
	(helper_loadaverage($$$$)): Ensure 1 and 15 minute load averages
	are over thresholds instead of just 15 minute, so that a high load
	average problem that was resolved will no longer be alarmed on.

2006-03-21  James Tanis  <jtt@swift.sysdetect.com>

	* lib/installlib.pl (start_job($$;$)): Use -Default- queue endrun
	for submitting jobs.

2006-02-01  James Tanis  <jtt@swift.sysdetect.com>

	* Baka/StructuredConf.pm: Convience function to return value of a
	key without derefercing yourself.

2005-08-10  Alex Dupuy  <alex.dupuy@counterstorm.com>

	* bin/BkReportGen: need Baka::Conf

2005-08-04  James Tanis  <jtt@cheviot.sysdetect.com>

	* perl/BkReportGen/output_mailto.pl (output_MIME_mailto($$$$;$)):
	Email text reports as MIME mail with two attachments. May be
	turned off via baka conf.

	* perl/BkReportGen/helper_simplereports.pl
	(helper_simplereports($$$$$$)): Mark tests with bad return codes
	more explicitly when preparing a text report.

2005-07-15  James Tanis  <jtt@cheviot.sysdetect.com>

	* lib/installlib.pl (spin($)): Option to supress spinner.

2005-06-24  Seth Robertson  <seth@blue.sysdetect.com>

	* perl/BkReportGen/helper_health_include.pl
	(helper_health_include($$$$)): Do not include HEALTH= in message
	presented to user.  Fix some outright syntax errors.

2005-04-25  James Tanis  <jtt@cheviot.sysdetect.com>
